--- a/src/app/component/candidatura/candidatura.admin.plist.routed/candidatura.admin.plist.routed.component.html
+++ b/src/app/component/candidatura/candidatura.admin.plist.routed/candidatura.admin.plist.routed.component.html
@@ -65,9 +65,12 @@
 
           </div>
           <!-- CTA Crear candidatura (solo admins) -->
-          <button *ngIf="isAdmin" class="btn-cta" type="button" (click)="create()">
-            <span class="btn-cta-bg"></span>
-            <span class="btn-cta-label"><i class="bi bi-plus-lg"></i> Nueva candidatura</span>
+          <button *ngIf="isAdmin" class="btn-cta" routerLink="/admin/candidatura/create">
+           <span class="btn-cta-bg"></span>
+            <span class="btn-cta-label">
+              <i class="bi bi-plus-lg"></i>
+              Nueva candidatura
+            </span>
           </button>
         </div>
 
